# wdl-unit-tests

./: .env-regulated  .gitignore  .sprocketignore  Makefile  README.md  cromwell.conf  index.html  make-preambles.py  pyproject.toml  style.css
.github/: CONTRIBUTING.md
WildcardsandConditions/: README.md  WildcardsandConditions.wdl  inputs.json
apiGpuAlloc/: README.md
apiHelloModuleHostname/: inputs.json
arrayOperations/: README.md  arrayOperations.wdl  inputs.json
assets/: docs.md
badValMissingValue/: README.md
basic-glob/: README.md  basic_glob_test.wdl
basic-glob-empty/: README.md  empty_glob_test.wdl
basicGlobTest/: basicGlobTest.wdl
basicTaskExecution/: README.md  basicTaskExecution.wdl
cacheTest/: README  cacheTest.wdl  cromwell.conf  inputs.json
conditionalTest/: README.md  conditionalTest.wdl  inputs.json
css/: style.css
docs/: README.md  architecture.md
emptyGlobTest/: README.md  emptyGlobTest.wdl
glob-subdir/: README.md  glob_subdir.wdl
glob-unmatched/: glob_unmatched_ext.wdl
globNonmatching/: README.md  globNonmatching.wdl
globSubdir/: README.md  globSubdir.wdl
globSymlink/: README.md  globSymlink.wdl
gpuAlloc/: README.md  conditions.json  gpuAlloc.wdl
helloDockerHostname/: README.md  helloDockerHostname.wdl
helloHostname/: README.md  helloHostname.wdl
helloModuleHostname/: README.md  helloModuleHostname.wdl
input-handling/: README.md  required_inputs.json  required_inputs.wdl
jsonFilelocalization/: README.md  inputs.json  jsonFilelocalization.wdl
jsonRuntimevariable/: README.md  jsonRuntimevariable.wdl  (+1 more)
(+599 files in other folders)
