[project]
name = "wdlunittests"
version = "0.1.0"
description = "WDL Unit Tests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "dateparser>=1.2.0",
  "colorama>=0.4.6",
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "pytest-recording>=0.13.2",
  "sh>=2.1.0",
  "tenacity>=9.0.0",
  "vcrpy>=7.0.0",
]

[dependency-groups]
dev = ["ruff>=0.9.4"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "A", "ARG"]
